사소한 UI 기능 개선

--- a/gRimApply/gRimApply.vcxproj
+++ b/gRimApply/gRimApply.vcxproj
@@ -206,6 +206,7 @@
     <ResourceCompile Include="gRimApply.rc" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="ClassDiagram.cd" />
     <None Include="res\gRimApply.rc2" />
   </ItemGroup>
   <ItemGroup>
