--- a/gRimApply/gRimApply.vcxproj.filters
+++ b/gRimApply/gRimApply.vcxproj.filters
@@ -54,6 +54,7 @@
     <None Include="res\gRimApply.rc2">
       <Filter>리소스 파일</Filter>
     </None>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\gRimApply.ico">
